--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
+		"vite": "^4.3.0",
+		"sass": "^1.62.0",
+		"svelte-preprocess": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@picocss/pico": "^1.5.10"
+	}
 }
